java/java-tests/testData/codeInsight/multipleJdks/java3/p/StaticCallOnChildWithNotAccessibleParent.java
package p;

class Sample {
  public static void main(String[] args) {
    ChildClass.<error descr="Cannot resolve method 'foo' in 'ChildClass'">foo</error>();
  }
}
